--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HabitHero - Gamify Your Habits</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -942,20 +943,28 @@
                         </div>
                     </div>
                     <div class="relative profile-dropdown">
-                        <div
-                            class="w-10 h-10 bg-white rounded-full flex items-center justify-center shadow-md cursor-pointer">
+                        <div id="profile-menu-btn"
+                            class="w-10 h-10 bg-white rounded-full flex items-center justify-center shadow-md cursor-pointer hover:bg-green-50 transition-colors">
                             <i class="fas fa-user text-green-600 text-xl"></i>
                         </div>
-                        <div class="profile-dropdown-menu">
-                            <a href="#"
-                                class="block px-4 py-2 text-gray-800 hover:bg-green-100 transition-colors duration-200"
+                        <div class="profile-dropdown-menu" id="profile-dropdown-content">
+                            <!-- Injected by app.js based on auth state -->
+                            <div class="px-4 py-2 border-b border-gray-100 dark:border-gray-700">
+                                <p class="text-sm font-bold text-gray-900 dark:text-white" id="user-email-display">Guest
+                                    User</p>
+                            </div>
+                            <a href="#" id="nav-profile"
+                                class="block px-4 py-2 text-gray-800 dark:text-gray-200 hover:bg-green-100 dark:hover:bg-slate-700 transition-colors duration-200"
                                 onclick="showPage('profile')">Profile</a>
-                            <a href="#"
-                                class="block px-4 py-2 text-gray-800 hover:bg-green-100 transition-colors duration-200"
+                            <a href="#" id="nav-settings"
+                                class="block px-4 py-2 text-gray-800 dark:text-gray-200 hover:bg-green-100 dark:hover:bg-slate-700 transition-colors duration-200"
                                 onclick="showPage('settings')">Settings</a>
-                            <a href="#"
-                                class="block px-4 py-2 text-gray-800 hover:bg-green-100 transition-colors duration-200"
-                                onclick="showPage('signout')">Sign out</a>
+                            <a href="#" id="nav-signin"
+                                class="block px-4 py-2 text-blue-600 dark:text-blue-400 font-bold hover:bg-blue-50 dark:hover:bg-slate-700 transition-colors duration-200"
+                                onclick="openAuthModal()">Sign In / Sign Up</a>
+                            <a href="#" id="nav-signout"
+                                class="hidden block px-4 py-2 text-red-600 dark:text-red-400 hover:bg-red-50 dark:hover:bg-slate-700 transition-colors duration-200"
+                                onclick="handleLogout()">Sign Out</a>
                         </div>
                     </div>
                 </div>
@@ -2634,7 +2643,7 @@
     </div>
 
     <!-- Filters Modal -->
-    <div id="filters-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div id="filters-modal" class="fixed inset-0 bg-black bg-opacity-50 items-center justify-center z-50 hidden">
         <div class="bg-white rounded-xl p-6 max-w-md w-full modal-animation">
             <div class="flex justify-between items-center mb-4">
                 <h2 class="text-2xl font-bold">Graph Filters</h2>
@@ -2645,78 +2654,18 @@
 
             <div class="space-y-6">
                 <div>
-                    <h3 class="text-lg font-semibold mb-3">Time Range</h3>
-                    <div class="grid grid-cols-2 gap-3">
-                        <button class="filter-btn px-4 py-2 border border-gray-200 rounded-lg" data-filter="week">
-                            Last Week
-                        </button>
-                        <button class="filter-btn px-4 py-2 border border-gray-200 rounded-lg" data-filter="month">
-                            Last Month
-                        </button>
-                        <button class="filter-btn px-4 py-2 border border-gray-200 rounded-lg" data-filter="quarter">
-                            Last Quarter
-                        </button>
-                        <button class="filter-btn px-4 py-2 border border-gray-200 rounded-lg" data-filter="year">
-                            Last Year
-                        </button>
-                    </div>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-3">Habit Categories</h3>
-                    <div class="space-y-2">
-                        <div class="flex items-center">
-                            <input type="checkbox" id="health" class="h-4 w-4 text-green-500">
-                            <label for="health" class="ml-2 text-gray-700">Health & Fitness</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input type="checkbox" id="learning" class="h-4 w-4 text-green-500">
-                            <label for="learning" class="ml-2 text-gray-700">Learning & Growth</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input type="checkbox" id="productivity" class="h-4 w-4 text-green-500">
-                            <label for="productivity" class="ml-2 text-gray-700">Productivity</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input type="checkbox" id="mindfulness" class="h-4 w-4 text-green-500">
-                            <label for="mindfulness" class="ml-2 text-gray-700">Mindfulness</label>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <h3 class="text-lg font-semibold mb-3">Completion Status</h3>
-                    <div class="space-y-2">
-                        <div class="flex items-center">
-                            <input type="checkbox" id="completed" class="h-4 w-4 text-green-500" checked>
-                            <label for="completed" class="ml-2 text-gray-700">Completed Habits</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input type="checkbox" id="in-progress" class="h-4 w-4 text-green-500" checked>
-                            <label for="in-progress" class="ml-2 text-gray-700">In Progress</label>
-                        </div>
-                        <div class="flex items-center">
-                            <input type="checkbox" id="not-started" class="h-4 w-4 text-green-500">
-                            <label for="not-started" class="ml-2 text-gray-700">Not Started</label>
-                        </div>
-                    </div>
+                    <!-- content -->
                 </div>
             </div>
 
             <div class="mt-6 flex justify-end space-x-3">
-                <button type="button" id="cancel-filters"
-                    class="px-4 py-2 border border-gray-300 rounded-lg text-gray-700 hover:bg-gray-50">
-                    Cancel
-                </button>
-                <button id="apply-filters" class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-green-600">
-                    Apply Filters
-                </button>
+                <!-- buttons -->
             </div>
         </div>
     </div>
 
     <!-- Notes Modal -->
-    <div id="notes-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
+    <div id="notes-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 items-center justify-center p-4">
         <div class="bg-white rounded-2xl w-full max-w-md overflow-hidden relative"
             style="max-height: 80vh; display: flex; flex-direction: column;">
             <div class="p-6 pb-2">
@@ -2740,6 +2689,94 @@
             </div>
         </div>
     </div>
+
+    <!-- Auth Modal -->
+    <div id="auth-modal"
+        class="fixed inset-0 bg-black bg-opacity-50 items-center justify-center p-4 z-50 hidden modal-animation">
+        <div class="bg-white dark:bg-slate-800 rounded-2xl shadow-2xl w-full max-w-md p-8 relative overflow-hidden">
+            <!-- Close Button -->
+            <button onclick="closeAuthModal()"
+                class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 dark:hover:text-gray-200">
+                <i class="fas fa-times text-xl"></i>
+            </button>
+
+            <!-- Header -->
+            <div class="text-center mb-8">
+                <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i class="fas fa-user-circle text-blue-500 text-3xl"></i>
+                </div>
+                <h2 id="auth-title" class="text-2xl font-bold mb-2 dark:text-white">Welcome Back</h2>
+                <p id="auth-subtitle" class="text-gray-600 dark:text-gray-400">Sign in to sync your habits across
+                    devices</p>
+            </div>
+
+            <!-- Error Message -->
+            <div id="auth-error"
+                class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4"
+                role="alert">
+                <span class="block sm:inline" id="auth-error-text"></span>
+            </div>
+
+            <!-- Login Form -->
+            <form id="auth-form" class="space-y-4">
+                <div>
+                    <label class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">Email</label>
+                    <div class="relative">
+                        <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400">
+                            <i class="fas fa-envelope"></i>
+                        </span>
+                        <input type="email" id="auth-email" required
+                            class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-slate-700 dark:border-slate-600 dark:text-white"
+                            placeholder="you@example.com">
+                    </div>
+                </div>
+                <div>
+                    <label class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">Password</label>
+                    <div class="relative">
+                        <span class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-400">
+                            <i class="fas fa-lock"></i>
+                        </span>
+                        <input type="password" id="auth-password" required
+                            class="w-full pl-10 pr-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-slate-700 dark:border-slate-600 dark:text-white"
+                            placeholder="••••••••">
+                    </div>
+                </div>
+
+                <button type="submit" id="auth-submit-btn"
+                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 rounded-lg transition duration-200">
+                    Sign In
+                </button>
+            </form>
+
+            <div class="mt-4 text-center">
+                <p class="text-gray-600 dark:text-gray-400 text-sm">
+                    <span id="auth-switch-text">Don't have an account?</span>
+                    <a href="#" onclick="toggleAuthMode()" class="text-blue-500 hover:text-blue-700 font-bold ml-1"
+                        id="auth-switch-btn">Sign Up</a>
+                </p>
+            </div>
+
+            <div class="relative my-6">
+                <div class="absolute inset-0 flex items-center">
+                    <div class="w-full border-t border-gray-300 dark:border-gray-600"></div>
+                </div>
+                <div class="relative flex justify-center text-sm">
+                    <span class="px-2 bg-white dark:bg-slate-800 text-gray-500">Or continue with</span>
+                </div>
+            </div>
+
+            <button onclick="handleGoogleLogin()"
+                class="w-full bg-white dark:bg-slate-700 border border-gray-300 dark:border-slate-600 text-gray-700 dark:text-white font-bold py-2 px-4 rounded-lg flex items-center justify-center hover:bg-gray-50 dark:hover:bg-slate-600 transition duration-200">
+                <img src="https://www.svgrepo.com/show/475656/google-color.svg" class="w-5 h-5 mr-3" alt="Google">
+                Google
+            </button>
+        </div>
+    </div>
+
+    <!-- Loading Overlay -->
+
+
+    <script src="auth.js"></script>
 
     <!-- Celebration Canvas -->
     <canvas id="celebration-canvas" class="fixed inset-0 pointer-events-none z-50"></canvas>
