--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HabitHero - Gamify Your Habits</title>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+        }
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -230,6 +235,27 @@
             pointer-events: auto;
         }
 
+        .dropdown-link {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .dropdown-link::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 3px;
+            background: var(--accent-500);
+            transform: scaleY(0);
+            transition: transform 0.2s ease;
+        }
+
+        .dropdown-link:hover::before {
+            transform: scaleY(1);
+        }
+
         /* Extended hover area */
         .profile-dropdown-menu::before {
             content: '';
@@ -449,18 +475,21 @@
         .achievement-item.unlocked {
             background: linear-gradient(135deg, #fef3c7, #fde68a);
             border: 2px solid #f59e0b;
+            box-shadow: 0 2px 8px rgba(245, 158, 11, 0.2);
         }
 
         .achievement-item.locked {
-            background: #f3f4f6;
+            background: #f9fafb;
             border: 1px solid #e5e7eb;
-            opacity: 0.8;
+            opacity: 1;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.06);
         }
 
         .dark .achievement-item.locked {
             background: #334155;
             border-color: #475569;
             opacity: 0.6;
+            box-shadow: none;
         }
 
         /* Quote banner */
@@ -954,17 +983,18 @@
                                     User</p>
                             </div>
                             <a href="#" id="nav-profile"
-                                class="block px-4 py-2 text-gray-800 dark:text-gray-200 hover:bg-green-100 dark:hover:bg-slate-700 transition-colors duration-200"
-                                onclick="showPage('profile')">Profile</a>
+                                class="dropdown-link block px-4 py-2 text-gray-800 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-slate-700 transition-all duration-200 hover:pl-5"
+                                onclick="showPage('profile')"><i
+                                    class="fas fa-user-circle mr-2 text-gray-400"></i>Profile</a>
                             <a href="#" id="nav-settings"
-                                class="block px-4 py-2 text-gray-800 dark:text-gray-200 hover:bg-green-100 dark:hover:bg-slate-700 transition-colors duration-200"
-                                onclick="showPage('settings')">Settings</a>
+                                class="dropdown-link block px-4 py-2 text-gray-800 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-slate-700 transition-all duration-200 hover:pl-5"
+                                onclick="showPage('settings')"><i class="fas fa-cog mr-2 text-gray-400"></i>Settings</a>
                             <a href="#" id="nav-signin"
-                                class="block px-4 py-2 text-blue-600 dark:text-blue-400 font-bold hover:bg-blue-50 dark:hover:bg-slate-700 transition-colors duration-200"
-                                onclick="openAuthModal()">Sign In / Sign Up</a>
+                                class="dropdown-link block px-4 py-2 text-blue-600 dark:text-blue-400 font-bold hover:bg-blue-50 dark:hover:bg-slate-700 transition-all duration-200 hover:pl-5"
+                                onclick="openAuthModal()"><i class="fas fa-sign-in-alt mr-2"></i>Sign In / Sign Up</a>
                             <a href="#" id="nav-signout"
-                                class="hidden block px-4 py-2 text-red-600 dark:text-red-400 hover:bg-red-50 dark:hover:bg-slate-700 transition-colors duration-200"
-                                onclick="handleLogout()">Sign Out</a>
+                                class="dropdown-link hidden block px-4 py-2 text-red-600 dark:text-red-400 hover:bg-red-50 dark:hover:bg-slate-700 transition-all duration-200 hover:pl-5"
+                                onclick="handleLogout()"><i class="fas fa-sign-out-alt mr-2"></i>Sign Out</a>
                         </div>
                     </div>
                 </div>
@@ -1128,11 +1158,15 @@
                             <i class="fas fa-user text-green-500 text-4xl"></i>
                         </div>
                         <div>
-                            <h2 class="text-2xl font-bold mb-1">John Doe</h2>
-                            <p class="text-gray-600 mb-2">Member since June 2023</p>
+                            <h2 class="text-2xl font-bold mb-1" id="profile-user-name">Guest User</h2>
+                            <p class="text-gray-600 mb-2" id="profile-member-since">Not signed in</p>
                             <div class="flex items-center">
                                 <i class="fas fa-gem text-blue-500 mr-1"></i>
                                 <span class="font-medium" id="profile-gem-count">50 Gems</span>
+                            </div>
+                            <div class="flex items-center mt-1">
+                                <i class="fas fa-star text-yellow-400 mr-1"></i>
+                                <span class="font-medium" id="profile-level-display">Level 1</span>
                             </div>
                         </div>
                     </div>
@@ -1383,22 +1417,89 @@
                             <div class="space-y-4">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-                                    <input type="email" value="john.doe@example.com"
-                                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                                    <input type="email" id="settings-email" value="" placeholder="Not signed in"
+                                        readonly
+                                        class="w-full px-4 py-2 border border-gray-300 rounded-lg bg-gray-50 cursor-not-allowed">
                                 </div>
                                 <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-                                    <input type="password" value="password123"
-                                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500">
-                                </div>
-                                <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Notifications</label>
-                                    <div class="flex items-center">
-                                        <input type="checkbox" id="notifications" checked
-                                            class="h-4 w-4 text-green-500 focus:ring-green-500 border-gray-300 rounded">
-                                        <label for="notifications" class="ml-2 block text-sm text-gray-700">Receive
-                                            daily reminders</label>
+                                    <label class="block text-sm font-medium text-gray-700 mb-1">Account Status</label>
+                                    <div class="flex items-center" id="settings-account-status">
+                                        <span
+                                            class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-gray-100 text-gray-600">
+                                            <i class="fas fa-user-slash mr-1"></i> Guest Mode
+                                        </span>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <h3 class="text-lg font-semibold mb-3">Notifications</h3>
+                            <div class="space-y-4">
+                                <div class="flex items-center justify-between">
+                                    <div>
+                                        <label class="block text-sm font-medium text-gray-700">Daily Reminders</label>
+                                        <p class="text-xs text-gray-500">Get reminded to complete your habits</p>
+                                    </div>
+                                    <label class="relative inline-flex items-center cursor-pointer">
+                                        <input type="checkbox" id="notif-daily-reminder" class="sr-only peer">
+                                        <div
+                                            class="w-11 h-6 bg-gray-200 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-green-500">
+                                        </div>
+                                    </label>
+                                </div>
+                                <div id="reminder-time-container" class="hidden">
+                                    <label class="block text-sm font-medium text-gray-700 mb-1">Reminder Time</label>
+                                    <select id="notif-reminder-time"
+                                        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500">
+                                        <option value="7">7:00 AM</option>
+                                        <option value="8">8:00 AM</option>
+                                        <option value="9" selected>9:00 AM</option>
+                                        <option value="10">10:00 AM</option>
+                                        <option value="12">12:00 PM</option>
+                                        <option value="17">5:00 PM</option>
+                                        <option value="18">6:00 PM</option>
+                                        <option value="19">7:00 PM</option>
+                                        <option value="20">8:00 PM</option>
+                                        <option value="21">9:00 PM</option>
+                                    </select>
+                                </div>
+                                <div class="flex items-center justify-between">
+                                    <div>
+                                        <label class="block text-sm font-medium text-gray-700">Streak Alerts</label>
+                                        <p class="text-xs text-gray-500">Warn when your streak is at risk</p>
+                                    </div>
+                                    <label class="relative inline-flex items-center cursor-pointer">
+                                        <input type="checkbox" id="notif-streak-alert" class="sr-only peer">
+                                        <div
+                                            class="w-11 h-6 bg-gray-200 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-green-500">
+                                        </div>
+                                    </label>
+                                </div>
+                                <div class="flex items-center justify-between">
+                                    <div>
+                                        <label class="block text-sm font-medium text-gray-700">Achievement
+                                            Notifications</label>
+                                        <p class="text-xs text-gray-500">Get notified when you earn achievements</p>
+                                    </div>
+                                    <label class="relative inline-flex items-center cursor-pointer">
+                                        <input type="checkbox" id="notif-achievements" class="sr-only peer" checked>
+                                        <div
+                                            class="w-11 h-6 bg-gray-200 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-green-500">
+                                        </div>
+                                    </label>
+                                </div>
+                                <div class="flex items-center justify-between">
+                                    <div>
+                                        <label class="block text-sm font-medium text-gray-700">Weekly Summary</label>
+                                        <p class="text-xs text-gray-500">Receive a weekly progress summary</p>
+                                    </div>
+                                    <label class="relative inline-flex items-center cursor-pointer">
+                                        <input type="checkbox" id="notif-weekly-summary" class="sr-only peer">
+                                        <div
+                                            class="w-11 h-6 bg-gray-200 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-green-500">
+                                        </div>
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -1408,11 +1509,11 @@
                             <div class="space-y-4">
                                 <div>
                                     <label class="block text-sm font-medium text-gray-700 mb-1">Theme</label>
-                                    <select
+                                    <select id="theme-select"
                                         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-green-500">
-                                        <option>Light</option>
-                                        <option>Dark</option>
-                                        <option>System</option>
+                                        <option value="Light">Light</option>
+                                        <option value="Dark">Dark</option>
+                                        <option value="System">System</option>
                                     </select>
                                 </div>
                                 <div>
@@ -2583,7 +2684,7 @@
                     <div class="space-y-4">
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">X-Axis Data</label>
-                            <select class="w-full px-4 py-2 border border-gray-300 rounded-lg">
+                            <select id="graph-x-axis" class="w-full px-4 py-2 border border-gray-300 rounded-lg">
                                 <option>Time (Days)</option>
                                 <option>Habits</option>
                                 <option>Categories</option>
@@ -2592,7 +2693,7 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">Y-Axis Data</label>
-                            <select class="w-full px-4 py-2 border border-gray-300 rounded-lg">
+                            <select id="graph-y-axis" class="w-full px-4 py-2 border border-gray-300 rounded-lg">
                                 <option>Completion Rate</option>
                                 <option>Streak Count</option>
                                 <option>Gems Earned</option>
@@ -2601,7 +2702,7 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700 mb-1">Time Range</label>
-                            <select class="w-full px-4 py-2 border border-gray-300 rounded-lg">
+                            <select id="graph-time-range" class="w-full px-4 py-2 border border-gray-300 rounded-lg">
                                 <option>Last 7 Days</option>
                                 <option>Last 30 Days</option>
                                 <option>Last 90 Days</option>
@@ -2715,6 +2816,17 @@
                 class="hidden bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4"
                 role="alert">
                 <span class="block sm:inline" id="auth-error-text"></span>
+            </div>
+
+            <!-- Resend Confirmation Email -->
+            <div id="resend-email-container" class="hidden text-center mb-4">
+                <p class="text-sm text-gray-600 dark:text-gray-400">
+                    Didn't receive a confirmation email?
+                    <a href="#" id="resend-email-btn"
+                        class="text-blue-500 hover:text-blue-700 font-semibold underline cursor-pointer ml-1">Resend
+                        confirmation email</a>
+                </p>
+                <span id="resend-email-status" class="text-sm mt-1 block"></span>
             </div>
 
             <!-- Login Form -->
